hphp/hack/test/typecheck/defined/if_func_call_2.php.exp
File "if_func_call_2.php", line 11, characters 10-11:
Variable $x is undefined, or not always defined (did you mean $b instead?) (Naming[2050])
